[tool.poetry]
name = "wiki.js-find-broken-links"
version = "0.1.0"
description = ""
authors = ["kmille <github@androidloves.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
browser-cookie3 = "^0.19.1"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
